1.去除codec依赖.